assets/Stylesheets/media.css
@media all and (max-width:380px) {
    b;
}
h5.Kenspage {
    position: relative;
    font-size: 2.8vh;
    margin: auto 2.5vw;
    text-align: left;
}
h2.label {
    position: relative;
    font-size: 3vh;
    line-height: 4vh;
    margin: 0;
    padding: 0;
}
div.contact{
    display:flex;
    flex-direction:column;
    align-items:center;
    margin-top:20%;
    width:95%;
    height:35vh}

div.lead.container {
    position: relative;
    padding: 0;
    margin: 0;
    z-index: -2;
}
div.privacy {
    position: absolute;
    top: 150vh;
}
footer#contact1 {
    position: relative;
    top: 20vh;
}
div#contact2 {
    position: relative;
    display: none;
}
small.contact {
    position: relative;
    display: block;
    margin-top: -50%;
    z-index: 0;
}
body#privacy {
    color: #fff;
}
section.row-alt {
    z-index: -2;
}
div#back {
    position: relative;
    z-index: -2;
}
u {
    color: #fff;
}
span {
    color: #fff;
}
li {
    color: #fff;
}
div#outputPage {
    z-index: -2;
}
span#policy.content {
    z-index: -2;
}
p.privacy {
    color: #847983;
}
div.text1, div.text2, div.text3, div.text4, p.text1, p.text2, p.text3, p.text4 {
    color: #82aeb1;
    position: relative;
    margin: auto 2.5%}
button#navbar-toggle.schedule {
    position: relative;
    left: 99%;
    margin-top: -10%}
img#profile.profilepic {
    position: relative;
    min-width: none;
    width: 80%;
    max-width: 100%;
    max-height: 100%;
    margin-left: 10%;
    border: 5px solid #df8642;
    z-index: -2;
}
a.linkedin, a.profile-link, a.project-tile {
    position: relative;
    text-decoration: underline;
}
a.project-tile::on-hover a.project-tile::on-click a.profile-link::on-hover a.profile-link::on-click a.linkedin::on-hover a.linkedin::on-click {
    color: #df8642;
}
body {
    max-width: 100%}
.row {
    max-width: 100%}
.grid {
    display: grid;
    display: -ms-grid;
    grid-template-columns: 1fr;
    -ms-grid-columns: 1fr;
    max-width: 100%}
.col-1-3 {
    min-width: -moz-fit-content;
    min-width: fit-content;
    min-width: -webkit-fill-available;
    min-width: fit-content;
    max-width: 95vw;
    max-height: -moz-fit-content;
    max-height: fit-content;
}
.col-2-3 {
    max-width: 95vw;
}
section.hero-container {
    position: relative;
}
.container, .group, header.primary-header {
    padding-bottom: 0;
    margin-bottom: 0;
    max-width: 100%;
    margin: 0;
}
a.logo img.logo {
    position: absolute;
    max-width: 100%
    z-index: -1;
    top: 1vh;
}
a.thanks {
    display: none;
}
img#about2.logo a#about3.logo {
    top: 1vh;
}
div.thanks-logo {
    position: relative;
    display: inline-block;
}
img.thanks {
    position: relative;
    width: 80%;
    margin-left: 6%;
    border: 5px solid #df8642;
    z-index: -2;
}
h1.thanks {
    position: relative;
    text-align: center;
    color: #82aeb1;
    font-size: 5.75vh;
    font-family: 'Optima Bold', Arial, Helvetica, sans-serif;
}
p.thanks {
    position: relative;
    color: #eca925;
    font-family: Optima, Arial, Helvetica, sans-serif;
    font-style: italic;
    margin: auto 2.5%}
h3.thanks {
    position: relative;
    margin: 0 2.5%}

div.#portfolio2.logo {
    position: relative;
    display: grid;
}
a#portfolio5.logo img#portfolio4.logo {
    position: relative;
    margin-top: -12.5vh;
    max-width: 100%;
}

a#info2.logo img#info3.logo {
    position: relative;
    top: -21.5vh;
}
body#privacy {
    position: relative;
}
section.col-1-3, section.teaser {
    margin: 0;
    padding: 0;
}
a#tagline.tagline, h2.tagline {
    display: none;
    visibility: hidden;
}
a.btn {
    display: flex;
    top: -18vh;
    text-align: center;
}
a.btn-alt {
    display: flex;
    order: 5;
    border: 0.6vw solid #eca925;
    width: 41vw;
    height: 6.5vh;
    text-align: center;

    
    
}
a.payment {
    position: relative;
    display: block;
    margin: 0;
    top: -10vh;
    line-height: 5vh;
    border: 2px solid #df8642;
    box-shadow: 1px 1px #82aeb1;
}
#coupon {
    font-size: 2.5vh;
    line-height: 3.5vh;
}
h3.stats {
    font-size: 5vh;
    line-height: 5.5vh;
}
img.sabrespritereg {
    height: 6vh;
    width: 10vw;
}
img.frontpgimg {
    display: flex;
    min-width: auto;
    max-width: 50%;
    max-height: 50%;
    background-color: #82aeb1;
    border: 2px solid #fff;
    margin-top: -30vh;
}
.primary-header a:hover {
    display: none;
}
h1#index {
    display: flex;
    justify-self: center;
    font-size: 2.5vh;
    text-align: right;
    color: #df8642;
    margin-top: 20%;
    margin-right: -20%;
}
h1#schedule {
    position: absolute;
    margin-top: 9vh;
    margin-left: 65%;
}
h1#about1.logo {
    position: absolute;
    top: 0;
    right: 2vw;
    margin-top: 20%;
    color: #df8642;
    font-weight: 700;
}
h1#info.logo {
    position: absolute;
    margin-top: 10.5vh;
    margin-left: 65%;
}
h1#portfolio.logo {
    position: absolute;
    display: inline;
    visibility: visible;
    top: 10%;
    width: 60vw;
    right: 1.5vw;
}
h1#privacy2.logo {
    position: relative;
    top: -16vh;
    font-weight: 400;
    margin-right: 1.5vw;
}
div.logo {
    position: relative;
    background-color: #042d4d;
    top: 5vh;
    padding-bottom: 10vh;
    z-index: -2;
}
div.text {
    font-family: Arapey, 'Times New Roman', Times, serif;
    font-style: italic;
    color: #82aeb1;
}
div#portfolio2 {
    position: relative;
    display: inline;
    margin-top: -5vh;
    z-index: -1;
}
img#portfolio3 {
    position: relative;
    top: -12.5vh;
}
h1.logo {
    font-size: 2vh;
    position: absolute;
    text-align: right;
    margin-left: 32.5%;
    padding: 0;
    margin-top: 0;
    line-height: 3vh;
    display: inline-block;
    z-index: -1;
    color: #df8642;
}
h1#contact3.logo {
    position: relative;
    right: 25%;
    width: 55%;
    z-index: -1;
    top: -16vh;
}
div.slideshow-container {
    position: relative;
    z-index: -2;
}
/* ... */

